# homebrew-neo4j-query

./: AGENTS.md  Cargo.toml  README.md
.claude/skills/neo4j-query/: SKILL.md
.github/workflows/: ci.yml  release.yml
.plans/: initial.md  prd-embedding-support.md  prd-global-connection-flags.md  prd-huggingface-embed-provider.md  prd-json-output-format.md  prd-schema-database-version-info.md  prd-schema-indexes-and-constraints.md  prd-skill-and-schema-subcommands.md  prd-truncate-large-arrays.md  progress-embedding-support.txt  progress-global-connection-flags.txt  progress-huggingface-embed-provider.txt  progress-json-output-format.txt  progress-schema-database-version-info.txt  progress-schema-indexes-and-constraints.txt  progress-skill-and-schema-subcommands.txt  progress-truncate-large-arrays.txt  tasks-embedding-support.yml  tasks-global-connection-flags.yml  tasks-huggingface-embed-provider.yml  tasks-json-output-format.yml  tasks-schema-database-version-info.yml  tasks-schema-indexes-and-constraints.yml  tasks-skill-and-schema-subcommands.yml  tasks-truncate-large-arrays.yml
Formula/: neo4j-query.rb
bench/: compare.sh  token_count.rs
skills/neo4j-query/: SKILL.md
src/: main.rs  params.rs  skill.rs
src/commands/: embed.rs  mod.rs
src/embed/: huggingface.rs  mod.rs  ollama.rs  openai.rs
tests/: docker-compose.yml  integration.rs  pull-ollama-models.sh  unit.rs
