[package]
name = "neo4j-query"
version = "0.1.0"
edition = "2021"
description = "Query Neo4j databases, output TOON"
license = "MIT"
repository = "https://github.com/oskarhane/homebrew-neo4j-query"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toon-format = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
