[package]
name = "neo4j-query"
version = "0.1.0"
edition = "2021"
description = "Query Neo4j databases, output TOON"
license = "MIT"
repository = "https://github.com/oskarhane/homebrew-neo4j-query"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toon-format = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = { version = "0.6", optional = true }

[features]
bench = ["tiktoken-rs"]

[[bin]]
name = "bench-token-count"
path = "bench/token_count.rs"
required-features = ["bench"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
